Opened 11 years ago
Closed 11 years ago
#2784 closed bug (fixed)
Scroll bars disabled if window is resized.
Reported by: | scottmc | Owned by: | stippi |
---|---|---|---|
Priority: | high | Milestone: | R1/alpha1 |
Component: | Kits/Interface Kit | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #2622 | |
Has a Patch: | no | Platform: | All |
Description
This was mentioned in a comment on #2622, so I thought it only affected StyledEdit. But when trying to resize the Expander show contents box the same thing happens, scroll bars are disabled.
Change History (4)
comment:1 by , 11 years ago
Component: | - General → Kits/Interface Kit |
---|
comment:2 by , 11 years ago
Milestone: | R1 → R1/alpha1 |
---|---|
Owner: | changed from | to
Priority: | normal → high |
The change that broke TextView was hrev27670. Steps to reproduce:
- StyledEdit /boot/var/log/syslog
- maximize StyledEdit
- notice that the Scrollbars get disabled
- notice that one is not even able get further down with the keyboard arrows
- select the text ALT+A, cut and past back
- scrollbars are enabled again and keyboard nav works again
Best regards, Karsten
comment:3 by , 11 years ago
Blocking: | 2622 added |
---|
Note:
See TracTickets
for help on using tickets.
Could it have something to do with stippi's recent changes to make some of those classes more layout friendly?