zooey + stippi: * Fix the calculation of the fTextRect member. The BeOS behavior (and also the   previous Haiku behavior) was to recalculate the "bottom" always. This was not   taken care of in SetTextRect() (needs to override the passed bottom). * The insets are already tracked in fLayoutData, use this in   _UpdateScrollBars() to calculate the correct data width/height (an   improvement over the BeOS behavior it seems). * Try to minimize the need to call _Refresh(), which reduces flickering a whole   lot. * Fix several instances where fTextRect was recalculated based on Bounds() and   the saved insets, where it was broken when the BTextView was scrolled.

Fixes #2784.


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28151 a95241bf-73f2-0310-859d-f6bbb57e9c96